fix project title wrap on mobile;

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -93,6 +93,7 @@ section h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .skill {
